--- a/vijay.html
+++ b/vijay.html
@@ -5,4 +5,8 @@
 
 <p>
    step  Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay, is an Indian actor and playback singer who works in Tamil cinema. In a career spanning in just over 3 decades, Vijay has acted in over 65 films and is one of the most co
+</p> 
+
+<p>
+   contact : 6382011167
 </p>
